--- a/nextjs/topics-as-navigation/package.json
+++ b/nextjs/topics-as-navigation/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@crystallize/react-image": "^7.2.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
